# checkwiki

./: .checkwiki.pl.swp  .gitignore  Makefile.am  README  checkwiki.cgi  checkwiki.pl  configure.ac  crontab  delete-done-articles.pl  dispatcher  dump_dispatcher.pl  install.sql  live_scan.pl  sk.cfg  sql.txt  starter.pl  tools.cfg  toolserver.cfg  translation.pl  update_db.pl  update_html.pl
cgi-bin/: Makefile.am  checkarticle.cgi  checkwiki.cgi  checkwiki_bots.cgi  dumplists.cgi
lists/: convert-checkwiki.pl  update_dumplists.pl  upload_dumpfiles.pl
queue/: checkwiki-delay_dispatch  checkwiki-dump_queue  crontab  delete-done-articles_dispatch  live-scan_dispatch  translation_dispatch  update-db_dispatch  update-html_dispatch
